Add length converter page

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,56 +1,46 @@
 <div class="row" id="home-content">
     <div class="col s12">
-        <a href="#">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title text-black">Length</span>
-                    <a href="#" class="card-button"><i class="material-icons">arrow_forward</i></a>
-                </div>
+        <div class="card" data-hash="#length">
+            <div class="card-content">
+                <span class="card-title text-black">Length</span>
+                <i class="material-icons card-button blue-text">arrow_forward</i>
             </div>
-        </a>
+        </div>
     </div>
 
     <div class="col s12">
-        <a href="#">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title text-black">Area</span>
-                    <a href="#" class="card-button"><i class="material-icons">arrow_forward</i></a>
-                </div>
+        <div class="card" onclick="window.location.hash='#area'">
+            <div class="card-content">
+                <span class="card-title text-black">Area</span>
+                <i class="material-icons card-button blue-text">arrow_forward</i>
             </div>
-        </a>
+        </div>
     </div>
 
     <div class="col s12">
-        <a href="#">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title text-black">Area</span>
-                    <a href="#" class="card-button"><i class="material-icons">arrow_forward</i></a>
-                </div>
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title text-black">Mass</span>
+                <i class="material-icons card-button blue-text">arrow_forward</i>
             </div>
-        </a>
+        </div>
     </div>
 
     <div class="col s12">
-        <a href="#">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title text-black">Volume</span>
-                    <a href="#" class="card-button"><i class="material-icons">arrow_forward</i></a>
-                </div>
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title text-black">Volume</span>
+                <i class="material-icons card-button blue-text">arrow_forward</i>
             </div>
-        </a>
+        </div>
     </div>
 
     <div class="col s12">
-        <a href="#">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title text-black">Temperature</span>
-                    <a href="#" class="card-button"><i class="material-icons">arrow_forward</i></a>
-                </div>
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title text-black">Temperature</span>
+                <i class="material-icons card-button blue-text">arrow_forward</i>
             </div>
-        </a>
+        </div>
     </div>
 </div>
