Add convert units function

--- a/src/pages/length.html
+++ b/src/pages/length.html
@@ -15,7 +15,7 @@
             <div class="input-field col s12">
                 <span class="prefix">cm</span>
                 <input id="cm" type="number" />
-                <label for="mm">Centimeter</label>
+                <label for="cm">Centimeter</label>
             </div>
         </div>
     </div>
@@ -61,6 +61,15 @@
                 <span class="prefix">ft</span>
                 <input id="ft" type="number" />
                 <label for="ft">Foot</label>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 l6">
+        <div class="row">
+            <div class="input-field col s12">
+                <span class="prefix">ft-us</span>
+                <input id="ft-us" type="number" />
+                <label for="ft-us">US Survey Foot</label>
             </div>
         </div>
     </div>
