Add function to home card link

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,6 +1,6 @@
 <div class="row" id="home-content">
     <div class="col s12">
-        <div class="card" data-hash="#length">
+        <div class="card" data-link="#length">
             <div class="card-content">
                 <span class="card-title text-black">Length</span>
                 <i class="material-icons card-button blue-text">arrow_forward</i>
@@ -9,7 +9,7 @@
     </div>
 
     <div class="col s12">
-        <div class="card" onclick="window.location.hash='#area'">
+        <div class="card" data-link="#area">
             <div class="card-content">
                 <span class="card-title text-black">Area</span>
                 <i class="material-icons card-button blue-text">arrow_forward</i>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="col s12">
-        <div class="card">
+        <div class="card" data-link="#mass">
             <div class="card-content">
                 <span class="card-title text-black">Mass</span>
                 <i class="material-icons card-button blue-text">arrow_forward</i>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="col s12">
-        <div class="card">
+        <div class="card" data-link="#volume">
             <div class="card-content">
                 <span class="card-title text-black">Volume</span>
                 <i class="material-icons card-button blue-text">arrow_forward</i>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="col s12">
-        <div class="card">
+        <div class="card" data-link="#temperature">
             <div class="card-content">
                 <span class="card-title text-black">Temperature</span>
                 <i class="material-icons card-button blue-text">arrow_forward</i>
