--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PWA Unit Converter</title>
+        <meta name="theme-color" content="#26a69a" />
+
+        <link rel="manifest" href="/manifest.json" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+        <title>PWA Unit Converter</title>
     </head>
     <body>
         <header class="navbar-fixed">
-            <nav>
+            <nav class="teal lighten-1">
                 <div class="nav-wrapper container">
                     <a href="#" data-target="slide-out" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
@@ -58,4 +62,20 @@
             </div>
         </main>
     </body>
+
+    <!-- Register the service worker -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker
+                    .register('service-worker.js')
+                    .then((reg) => {
+                        console.log('Service worker registered!', reg);
+                    })
+                    .catch((err) => {
+                        console.log('Service worker registration failed!', err);
+                    });
+            });
+        }
+    </script>
 </html>
