--- a/src/index.html
+++ b/src/index.html
@@ -28,30 +28,32 @@
             <div class="sidenav-container">
                 <ul id="slide-out" class="sidenav">
                     <li>
-                        <a class="waves-effect" href="#"><i class="material-icons">home</i>Home</a>
+                        <a class="waves-effect sidenav-close" href="#">
+                            <i class="material-icons">home</i>Home
+                        </a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#length">
+                        <a class="waves-effect sidenav-close" href="#length">
                             <i class="material-icons">straighten </i>Length
                         </a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#area">
+                        <a class="waves-effect sidenav-close" href="#area">
                             <i class="material-icons">square_foot</i>Area
                         </a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#mass">
+                        <a class="waves-effect sidenav-close" href="#mass">
                             <i class="material-icons">fitness_center</i>Mass
                         </a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#volume">
+                        <a class="waves-effect sidenav-close" href="#volume">
                             <i class="material-icons">opacity</i>Volume
                         </a>
                     </li>
                     <li>
-                        <a class="waves-effect" href="#temperature">
+                        <a class="waves-effect sidenav-close" href="#temperature">
                             <i class="material-icons">ac_unit</i>Temperature
                         </a>
                     </li>
