--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="#26a69a" />
+        <meta name="author" content="Fiqri Syah Redha" />
+        <meta name="description" content="Unit converter built with PWA technology" />
 
         <link rel="manifest" href="/manifest.json" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -55,6 +57,11 @@
                     <li>
                         <a class="waves-effect sidenav-close" href="#temperature">
                             <i class="material-icons">ac_unit</i>Temperature
+                        </a>
+                    </li>
+                    <li>
+                        <a class="waves-effect sidenav-close" href="#about">
+                            <i class="material-icons">info</i>About
                         </a>
                     </li>
                 </ul>
