--- a/src/pages/mass.html
+++ b/src/pages/mass.html
@@ -1,4 +1,4 @@
-<div class="row" id="length-content">
+<div class="row" id="mass-content">
     <h1 class="content-title grey-text text-darken-4">Mass</h1>
 
     <div class="col s12 l6">
