--- a/src/pages/temperature.html
+++ b/src/pages/temperature.html
@@ -1,4 +1,4 @@
-<div class="row" id="length-content">
+<div class="row" id="temperature-content">
     <h1 class="content-title grey-text text-darken-4">Temperature</h1>
 
     <div class="col s12 l6">
