--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
         <meta name="author" content="Fiqri Syah Redha" />
         <meta name="description" content="Unit converter built with PWA technology" />
 
+        <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png" />
+        <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="shortcut icon" href="images/favicons/favicon.ico" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="msapplication-config" content="images/favicons/browserconfig.xml" />
+
         <link rel="manifest" href="/manifest.json" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
